# Sudoko

./: Cargo.toml  LICENSE  Makefile  README.md  build-wasm.sh
benches/: solver_benchmark.rs
examples/: hints_and_validation.rs  puzzle_generation.rs
src/: lib.rs  main.rs  solver.rs  sudoku.rs  utils.rs
sudoko/: Cargo.toml
sudoko-tui/: Cargo.toml  README.md
sudoko-tui/src/: main.rs
sudoko-wasm/: Cargo.toml
sudoko-wasm/src/: lib.rs
sudoko/examples/: basic_solving.rs  comprehensive_validation_test.rs  enhanced_validation_test.rs  position_8_1_test.rs  tui_scenario_test.rs  validation_test.rs  wasm_validation_test.rs
sudoko/src/: lib.rs  solver.rs  strategies.rs  sudoku.rs  wasm.rs
tests/: integration_tests.rs
web-example/: index.html  test.html
