[package]
name = "sudoko-tui"
version = "0.3.0"
edition = "2021"
authors = ["Hrithik Dhakrey <dhakreyhrithik@gmail.com>"]
description = "Terminal User Interface for the sudoko library - simple interactive text interface"
license = "MIT"
repository = "https://github.com/iamdhakrey/sudoko"
homepage = "https://github.com/iamdhakrey/sudoko"
documentation = "https://docs.rs/sudoko-tui"
readme = "../README.md"
keywords = ["sudoku", "tui", "terminal", "puzzle", "game"]
categories = ["games", "command-line-utilities"]
exclude = ["target/"]

[[bin]]
name = "sudoko-tui"
path = "src/main.rs"

[dependencies]
sudoko = "0.3.0"
