[package]
name = "sudoko-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Hrithik Dhakrey <dhakreyhrithik@gmail.com>"]
description = "WebAssembly interface for the sudoko library"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
sudoko = { path = "../sudoko" }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"]

[features]
default = ["console_error_panic_hook"]
