[package]
name = "sudoko"
version = "0.3.0"
edition = "2021"
authors = ["Hrithik Dhakrey <dhakreyhrithik@gmail.com>"]
description = "A comprehensive Sudoku solving library with multiple strategies, puzzle generation, and WebAssembly support"
license = "MIT"
repository = "https://github.com/iamdhakrey/sudoko"
homepage = "https://github.com/iamdhakrey/sudoko"
documentation = "https://docs.rs/sudoko"
readme = "../README.md"
keywords = ["sudoku", "puzzle", "solver", "game", "algorithms"]
categories = ["games", "algorithms"]
exclude = ["target/", "pkg-*/", "web-example/"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sudoko-cli"
path = "src/main.rs"

[[example]]
name = "basic_solving"
path = "examples/basic_solving.rs"

[[example]]
name = "puzzle_generation"
path = "examples/puzzle_generation.rs"

[[example]]
name = "hints_and_validation"
path = "examples/hints_and_validation.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"]
optional = true

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
criterion = "0.5"
